fixed issue with solid scrollbars

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -9,6 +9,8 @@ html, body {
     font-family: BreeSerif;
     color: #c5c5c5;
     background-color: #1e1e1e;
+    max-width: 100%;
+    width: 100%;
 }
 
 #header {
